--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <a href="#projects" class="btn-primary">View My Work</a>
                         <!-- <a href="#contact" class="btn-secondary">Contact Me</a> -->
                         <div class="hero-resume">
-                            <a href="Adarsh_Data_Science.pdf" class="resume-btn" download="Adarsh_Resume.pdf">
+                            <a href="Adarsh_Data_Science_Resume.pdf" class="resume-btn" download="Adarsh_Resume.pdf">
                                 Download Resume
                             </a>
                         </div>
